cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_playlist_add_pipe_case_2_args_only@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
items added to playlist
Daemon response:
Songs:
	song:01J1K5B6RJ84WJXCWYJ5WNE12E: "Test Song" (by: ["Test Artist"], album: Test Album)
