cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_playlist_export_existing_file@export_playlist.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(std::fs::read(path).unwrap()).unwrap()"
---
#EXTM3U

#PLAYLIST:Test Playlist

#EXTINF:180,Test Song - Test Artist
#EXTGENRE:Test Genre
#EXTALB:Test Artist
test.mp3
